src/modules/layout/layout.css
/*
  >>> BEGIN: Layout
*/
.theme-inner {
    overflow: hidden;
    height: 100vh;
}
#main-container {
    transition: none;
}
#left-sidebar {
    padding-top: 0 !important;
    bottom: 0;
}
#left-sidebar .left-sidebar-inner>.wrap {
    margin-top: 0;
}
.left-sidebar-inner .nav-contents-container {
    padding-bottom: calc(60px + var(--awUI-tabs-height));
}
#main-content-container {
    flex-wrap: wrap !important;
}
#main-content-container:focus-visible {
    outline: none;
}
.is-banner-active #banner,
body:not(.is-banner-active) .cp__sidebar-main-content,
#left-sidebar,
#right-sidebar {
    margin-top: calc(var(--awUI-tabs-height) + var(--awUI-head-height)) !important;
}
/*
  <<<< END: Layout
*/

